# unsuperlearn

./: 01-pca.ipynb  02-clustering.ipynb  pyproject.toml  usarrests_pca.csv
pca_plots/: pca01.html  pca02.html  pca12.html  pca23.html  pca_mag.html
