[tool.poetry]
name = "unsuperlearn"
version = "0.1.0"
description = ""
authors = ["Matt H."]
readme = "README.md"

[tool.poetry.dependencies]
bokeh = "^3.0.3"
jupyter = "^1.0"
jupyter_bokeh = "^1"
numpy = "^1.24.0"
seaborn = "^0"
matplotlib = "^3"
python = ">=3.10.8,<3.11"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
scipy = "^1.9.3"
selenium = "^4.7.2"
hdbscan = "^0.8.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
